--- a/enem_classification/requirements.txt
+++ b/enem_classification/requirements.txt
@@ -11,7 +11,7 @@ ipython==6.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.2.1
 jedi==0.12.0
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
@@ -22,7 +22,7 @@ mistune==0.8.3
 more-itertools==4.2.0
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.5.0
+notebook>=5.7.8
 numpy==1.14.5
 pandas==0.23.1
 pandocfilters==1.4.2
